--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,67 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 600;
+  max-width: 500px;
+  align-items: center;
+  justify-content: center;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  text-shadow: 2px 2px 5px black;
+  color-scheme: light;
+  color: white;
+  background-color: #e8e3e3;
 
-  font-synthesis: none;
+  /* font-synthesis: none; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  place-items: normal start;
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
+  color: rgb(255, 179, 0);
+  font-family: cursive;
   font-size: 3.2em;
   line-height: 1.1;
+  text-shadow: 3px 3px 5px black;
+
+}
+
+h3 {
+  font-size: 5.5em;
+  color: rgba(255, 0, 0, 0.773)
+}
+
+li {
+  font-weight: 400;
+  text-align:start;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.3em 0.5em;
+  margin: 0.1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  color: #e8e3e3;
+  background-color: #413f3f;
   cursor: pointer;
   transition: border-color 0.25s;
+
 }
-button:hover {
+/* button:hover {
   border-color: #646cff;
-}
-button:focus,
+} */
+/* button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+} */
